--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,8 @@
     <script async src="https://cse.google.com/cse.js?cx=031b060c4c58cdae4"></script>
 
 </head>
-<body class="sidebar-mini layout-fixed sidebar-collapse" onload=display_ct(); style="background-image: url('@ViewData["background"]');
+<body class="sidebar-mini layout-fixed sidebar-collapse" onload=display_ct(); style="
+        background-image: url('@ViewData["background"]');
         width: 100%;
         height: auto;
         background-repeat: no-repeat;
@@ -323,7 +324,7 @@
                     <nav class="mt-2">
                         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                             <!-- Add icons to the links using the .nav-icon class
-                            with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
 
                             <li class="nav-item">
                                 <a asp-controller="Home" asp-action="Index" class="nav-link">
@@ -460,7 +461,14 @@
                                 </li>
 
                             }
-
+                            <li class="nav-item">
+                                <a asp-controller="Invites" asp-action="Create" class="nav-link">
+                                    <i class="nav-icon fas fa-location-arrow"></i>
+                                    <p>
+                                        Invite Ticket
+                                    </p>
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                     <!-- /.sidebar-menu -->
