update create new ticket with ajax

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -53,8 +53,13 @@
                                             </div>
                                             <div class="form-group">
                                                 <label name="projectId" class="control-label">Projects</label>
-                                                <select name="projectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                                                <select name="projectId" id="projectId" class="form-control" onchange="getDevelopersOnProject()" asp-items="ViewBag.ProjectId">
+                                                    <option value="">Choose Project</option>
+                                                </select>
                                             </div>
+
+
+
                                             @if (!(await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Submitter.ToString())))
                                             {
                                                 <div class="form-group form-check">
@@ -65,7 +70,10 @@
 
                                                 <div class="form-group">
                                                     <label name="DeveloperId" class="control-label">Developer</label>
-                                                    <select name="DeveloperId" class="form-control" asp-items="@ViewBag.DeveloperId"></select>
+                                                    <select name="DeveloperId"  id="DeveloperId" class="form-control" >
+                                                        <option value="" >Choose Developer</option>
+                                                    </select>
+                                                    
                                                 </div>
                                             }
 
