--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -768,9 +768,13 @@
                                             @Html.DisplayFor(modelItem => item.TicketType.Name)
                                         </td>
                                         <td class="project-actions text-right">
-                                            <a class="btn btn-primary btn-sm mb-1" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-folder"></i> View</a>
-                                            <a class="btn btn-info btn-sm mb-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i> Edit</a>
-                                            <a class="btn btn-danger btn-sm mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
+                                            <a class="btn btn-primary btn-sm mb-1" asp-controller="Tickets" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-folder"></i> View</a>
+                                            @if (await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Admin.ToString()))
+                                            {
+                                                <a class="btn btn-info btn-sm mb-1" asp-controller="Tickets" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i> Edit</a>
+                                                <a class="btn btn-danger btn-sm mb-1" asp-controller="Tickets" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
+                                            }
+
                                         </td>
                                     </tr>
                                 }
