--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -45,13 +45,13 @@
     <script async src="https://cse.google.com/cse.js?cx=031b060c4c58cdae4"></script>
 
 </head>
-<body class="sidebar-mini layout-fixed sidebar-collapse mb-0" onload=display_ct(); style="
+<body class="sidebar-mini layout-fixed sidebar-collapse mb-0" onload=display_ct(); style="       
         background-image: url('@ViewData["background"]');
-        width: 100%;
-        height: auto;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-size: cover;">
+        background-size:cover;
+        background-position: center;
+">
 
     <div>
         <audio id="myaudio" loop>
