fix shooting star on login page

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -73,20 +73,25 @@
                 return myAudio.paused ? myAudio.play() : myAudio.pause();
             };
         </script>
-        <div class="sky-container">
-            <div class="star"></div>
-            <div class="star"></div>
-            <div class="star"></div>
-            <div class="star"></div>
-            <div class="star"></div>
-        </div>
+
         <div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
+
+        <div  class="center" style="position: fixed;">
+            <div class="sky-container">
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+            </div>
+        </div>
+       
         <div class="container-fluid" style="opacity: 0.57;">
             <br />
             <br /> <br /><br />
             <div class="row">
                 <div class="col"></div>
-                <div class="col-lg-3half">
+                <div class="col-lg-3half pl-0 pr-0">
                     <div class="shadow-lg p-3 mb-4 bg-dark rounded ">
                         <div class="row">
                             <div class="col">
@@ -363,10 +368,10 @@
 
 
                             @*<div class="col">
-                                    <a class="btn btn-secondary btn-block">
-                                        How to use?
-                                    </a>
-                                </div>*@
+                                <a class="btn btn-secondary btn-block">
+                                    How to use?
+                                </a>
+                            </div>*@
                         </div>
                         <hr />
                         <div class="row">
