--- a/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -4,15 +4,18 @@
     ViewData["Title"] = "Confirm email change";
     ViewData["background"] = "/img/4kpic4.jpg";
 }
-<div class="sky-container">
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-</div>
+
 <div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
 
+<div class="center" style="position: fixed;">
+    <div class="sky-container">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+    </div>
+</div>
 <div class="container" style="opacity: 0.9;padding-top:15%;">
     <div class="row">
         <div class="col text-center">
@@ -21,8 +24,8 @@
     </div>
     <div class="row">
         <div class="col"></div>
-        <div class="col-4 text-center">           
-            <partial name="_StatusMessage" model="Model.StatusMessage" />           
+        <div class="col-4 text-center">
+            <partial name="_StatusMessage" model="Model.StatusMessage" />
         </div>
         <div class="col"></div>
     </div>
