--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,15 +4,18 @@
     ViewData["Title"] = "Forgot password confirmation";
     ViewData["background"] = "/img/4kpic4.jpg";
 }
-<div class="sky-container">
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-</div>
+
 <div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
 
+<div class="center" style="position: fixed;">
+    <div class="sky-container">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+    </div>
+</div>
 <div class="container" style="opacity: 0.9;padding-top:15%;">
     <div class="row">
         <div class="col text-center">
@@ -21,10 +24,10 @@
     </div>
     <div class="row">
         <div class="col"></div>
-        <div class="col-4 text-center">         
+        <div class="col-4 text-center">
             <h2>
                 Please check your email to reset your password.
-            </h2>           
+            </h2>
         </div>
         <div class="col"></div>
     </div>
