--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,15 +4,21 @@
     ViewData["Title"] = "Register";
     ViewData["background"] = "/img/4kpic4.jpg";
 }
-<div class="sky-container">
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-</div>
+
 <div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div><div class="firefly"></div>
+
+<div class="center" style="position: fixed;">
+    <div class="sky-container">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+    </div>
+</div>
 <div class="container-fluid" style="opacity: 0.5;">
+
+
     <br />
     <br /><br /><br />
     <div class="row">
@@ -46,7 +52,7 @@
                                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
                             </div>
                         </div>
-                    </div>                                      
+                    </div>
                     <div class="form-group">
                         <label asp-for="Input.CompanyId" class="control-label"></label>
                         <select asp-for="Input.CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
@@ -71,7 +77,7 @@
                                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                             </div>
                         </div>
-                    </div>                                  
+                    </div>
                     <button class=" button-big button button-a btn-block" style="background-color:#1cd5db;font-size: 140%;font-weight: 800;letter-spacing: 1px;text-transform: uppercase;border-radius: 0;font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;color:white;border:0;" type="submit">Register</button>
                 </form>
                 <div class="row pt-2 ">
