--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,11 +9,11 @@
 @inject UserManager<CustomUser> UserManager
 @{
     ViewData["Title"] = "Home Page";
- 
+    var user = await UserManager.GetUserAsync(User);
 }
 <div class="container-fluid">
     <div class="row mt-2">
-        @if ((await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Admin.ToString())) || (await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.ProjectManager.ToString())))
+        @if ((await UserManager.IsInRoleAsync(user, Roles.Admin.ToString())) || (await UserManager.IsInRoleAsync(user, Roles.ProjectManager.ToString())))
         {
             <div class="col-8">
                 <div class="card">
@@ -60,7 +60,7 @@
 
 
 
-                                            @if (!(await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Submitter.ToString())))
+                                            @if (!(await UserManager.IsInRoleAsync(user, Roles.Submitter.ToString())))
                                             {
                                                 <div class="form-group form-check">
                                                     <label class="form-check-label">
@@ -70,10 +70,10 @@
 
                                                 <div class="form-group">
                                                     <label name="DeveloperId" class="control-label">Developer</label>
-                                                    <select name="DeveloperId"  id="DeveloperId" class="form-control" >
-                                                        <option value="" >Choose Developer</option>
+                                                    <select name="DeveloperId" id="DeveloperId" class="form-control">
+                                                        <option value="">Choose Developer</option>
                                                     </select>
-                                                    
+
                                                 </div>
                                             }
 
@@ -87,7 +87,7 @@
                                                 <select name="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
                                             </div>
                                             <div class="form-group">
-                                                <label name="TicketTypeId" class="control-label">TicketType</label>
+                                                <label name="TicketTypeId" class="control-label">Ticket Type</label>
                                                 <select name="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
                                             </div>
 
@@ -151,7 +151,7 @@
                         <a asp-controller="Projects" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-tasks"></i> View Projects </a>
                         <a asp-controller="Home" asp-action="ManageRole" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-people-arrows"></i> Role's Management </a>
                         <a asp-controller="Projects" asp-action="ManagerUserProject" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-user-edit"></i> Project User Management</a>
-                      
+
                         <button type="button" class="btn btn-secondary pb-2 mb-2" data-toggle="modal" data-target="#exampleModal3">
                             <i class="fas fa-location-arrow"></i> Create a Invite Ticket
                         </button>
@@ -174,7 +174,7 @@
                                             <div class="form-group">
                                                 <label name="Email" class="control-label">Email</label>
                                                 <input name="Email" class="form-control" />
-                                               
+
                                             </div>
                                             <div class="form-group form-check">
                                                 <label class="form-check-label">
@@ -216,7 +216,7 @@
             </div>
 
         }
-        else if ((await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Submitter.ToString())))
+        else if ((await UserManager.IsInRoleAsync(user, Roles.Submitter.ToString())))
         {
             <div class="col">
                 <div class="card">
@@ -258,7 +258,7 @@
                                                 <label name="projectId" class="control-label">Projects</label>
                                                 <select name="projectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
                                             </div>
-                                            @if (!(await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Submitter.ToString())))
+                                            @if (!(await UserManager.IsInRoleAsync(user, Roles.Submitter.ToString())))
                                             {
                                                 <div class="form-group form-check">
                                                     <label class="form-check-label">
@@ -282,7 +282,7 @@
                                                 <select name="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
                                             </div>
                                             <div class="form-group">
-                                                <label name="TicketTypeId" class="control-label">TicketType</label>
+                                                <label name="TicketTypeId" class="control-label">Ticket Type</label>
                                                 <select name="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
                                             </div>
 
@@ -360,7 +360,7 @@
                 </div>
             </div>
         }
-        else if ((await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Developer.ToString())))
+        else if ((await UserManager.IsInRoleAsync(user, Roles.Developer.ToString())))
         {
             <div class="col">
                 <div class="card">
@@ -402,7 +402,7 @@
                                                 <label name="projectId" class="control-label">Projects</label>
                                                 <select name="projectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
                                             </div>
-                                            @if (!(await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Developer.ToString())))
+                                            @if (!(await UserManager.IsInRoleAsync(user, Roles.Developer.ToString())))
                                             {
                                                 <div class="form-group form-check">
                                                     <label class="form-check-label">
@@ -426,7 +426,7 @@
                                                 <select name="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
                                             </div>
                                             <div class="form-group">
-                                                <label name="TicketTypeId" class="control-label">TicketType</label>
+                                                <label name="TicketTypeId" class="control-label">Ticket Type</label>
                                                 <select name="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
                                             </div>
 
@@ -769,7 +769,7 @@
                                         </td>
                                         <td class="project-actions text-right">
                                             <a class="btn btn-primary btn-sm mb-1" asp-controller="Tickets" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-folder"></i> View</a>
-                                            @if (await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Admin.ToString()))
+                                            @if (await UserManager.IsInRoleAsync(user, Roles.Admin.ToString()))
                                             {
                                                 <a class="btn btn-info btn-sm mb-1" asp-controller="Tickets" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i> Edit</a>
                                                 <a class="btn btn-danger btn-sm mb-1" asp-controller="Tickets" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
