--- a/Views/Invites/Create.cshtml
+++ b/Views/Invites/Create.cshtml
@@ -1,55 +1,73 @@
 ﻿@model BugTracker.Models.Invite
-
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<CustomUser> SignInManager
+@inject UserManager<CustomUser> UserManager
+@using BugTracker.Data.Enums
 @{
     ViewData["Title"] = "Create";
+    var user = await UserManager.GetUserAsync(User);
 }
-<br /><br />
+<br />
+<br />
 <div class="row">
     <div class="col-2"></div>
     <div class="col">
-       
-            <div class="card shadow-lg mb-5 bg-white rounded">
-                <div class="card-header bg-dark">
-                    <h3 class="card-title">Create New Invite Ticket</h3>
 
-                </div>
-                <div class="card-body">
+        <div class="card shadow-lg mb-5 bg-white rounded">
+            <div class="card-header bg-dark">
+                <h3 class="card-title">Create New Invite Ticket</h3>
+
+            </div>
+            <div class="card-body">
 
 
 
-                    <div class="row">
+                <div class="row">
 
-                        <div class="col">
+                    <div class="col">
 
-                            <form asp-action="Create">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <form asp-action="Create">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                            <div class="form-group">
+                                <label asp-for="Email" class="control-label ">Email</label>
+                                <input asp-for="Email" class="form-control" placeholder="Enter Your Email..." required />
+
+                            </div>
+                            @if ((await UserManager.IsInRoleAsync(user, Roles.Admin.ToString())))
+                            {
                                 <div class="form-group">
-                                    <label asp-for="Email" class="control-label"></label>
-                                    <input asp-for="Email" class="form-control" />
-                                    <span asp-validation-for="Email" class="text-danger"></span>
+                                    <label name="CompanyName" class="control-label">Company Name</label>
+                                    <input name="CompanyName" class="form-control" placeholder="Enter your company name..." required />
                                 </div>
-                                <div class="form-group form-check">
-                                    <label class="form-check-label">
-                                        <input class="form-check-input" asp-for="IsValid" /> @Html.DisplayNameFor(model => model.IsValid)
-                                    </label>
-                                </div>
+
+                            }
+                            @if ((await UserManager.IsInRoleAsync(user, Roles.ProjectManager.ToString())))
+                            {
+
                                 <div class="form-group">
-                                    <label asp-for="CompanyId" class="control-label"></label>
-                                    <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
+                                    <label name="Role" class="control-label">Assign Role</label>
+                                    <select name="Role" id="DeveloperId" class="form-control" asp-items="ViewBag.Roles"></select>
                                 </div>
-                             
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary"><i class="fas fa-location-arrow"></i> Send Invite Ticket</button>
-                                    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-                                </div>
-                            </form>
+                            }
+
+
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary"><i class="fas fa-location-arrow"></i> Send Invite Ticket</button>
+                            @if ((await UserManager.IsInRoleAsync(user, Roles.Admin.ToString())))
+                            {
+                                <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+
+                            }
                         </div>
-
+                        </form>
                     </div>
 
                 </div>
+
             </div>
- 
+        </div>
+
     </div>
     <div class="col-2"></div>
 </div>
