--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -11,8 +11,8 @@
 @inject UserManager<CustomUser> UserManager
 @inject IImageService imageService
 @inject ICustomRoleService roleService
-
-@{ 
+@using BugTracker.Data.Enums
+@{
     var user = await UserManager.GetUserAsync(User);
     var roles = await roleService.ListUserRoleAsync(user);
 }
@@ -64,10 +64,21 @@
                         <label asp-for="Username"></label>
                         <input asp-for="Username" class="form-control" disabled />
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Input.CompanyId" class="control-label"></label>
-                        <select asp-for="Input.CompanyId" class="form-control" asp-items="@ViewBag.CompanyId"></select>
-                    </div>
+                    @if (await UserManager.IsInRoleAsync(user, Roles.Admin.ToString()))
+                    {
+                        <div class="form-group">
+                            <label asp-for="Input.CompanyId" class="control-label"></label>
+                            <select asp-for="Input.CompanyId" class="form-control" asp-items="@ViewBag.CompanyId"></select>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group">
+                            <label asp-for="Input.CompanyId" class="control-label"></label>
+                            <select asp-for="Input.CompanyId" class="form-control" disabled asp-items="@ViewBag.CompanyId"></select>
+                        </div>
+                    }
+
                     <div class="form-group">
                         <label asp-for="Input.PhoneNumber"></label>
                         <input asp-for="Input.PhoneNumber" class="form-control" />
