--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -53,8 +53,8 @@
                                             </div>
                                             <div class="form-group">
                                                 <label name="projectId" class="control-label">Projects</label>
-                                                <select name="projectId" id="projectId" class="form-control" onchange="getDevelopersOnProject()" asp-items="ViewBag.ProjectId">
-                                                    <option value="">Choose Project</option>
+                                                <select name="projectId" id="projectId" class="form-control" required onchange="getDevelopersOnProject()" asp-items="ViewBag.ProjectId">
+                                                    <option value="" >Choose Project</option>
                                                 </select>
                                             </div>
 
@@ -70,7 +70,7 @@
 
                                                 <div class="form-group">
                                                     <label name="DeveloperId" class="control-label">Developer</label>
-                                                    <select name="DeveloperId" id="DeveloperId" class="form-control">
+                                                    <select name="DeveloperId" id="DeveloperId" class="form-control" required>
                                                         <option value="">Choose Developer</option>
                                                     </select>
 
@@ -134,7 +134,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <label name="CompanyId" class="control-label">Company</label>
-                                                <select name="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
+                                                <select name="CompanyId" class="form-control" asp-items="ViewBag.CompanyId" required></select>
                                             </div>
 
 
@@ -189,7 +189,7 @@
                                                
                                                 <div class="form-group">
                                                     <label name="Role" class="control-label">Assign Role</label>
-                                                    <select name="Role" id="DeveloperId" class="form-control" asp-items="ViewBag.Roles"></select>
+                                                    <select name="Role" id="DeveloperId" class="form-control" required asp-items="ViewBag.Roles"></select>
                                                 </div>
                                             }
 
@@ -261,7 +261,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <label name="projectId" class="control-label">Projects</label>
-                                                <select name="projectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                                                <select name="projectId" class="form-control" required asp-items="ViewBag.ProjectId"></select>
                                             </div>
                                             @if (!(await UserManager.IsInRoleAsync(user, Roles.Submitter.ToString())))
                                             {
@@ -273,7 +273,7 @@
 
                                                 <div class="form-group">
                                                     <label name="DeveloperId" class="control-label">Developer</label>
-                                                    <select name="DeveloperId" class="form-control" asp-items="@ViewBag.DeveloperId"></select>
+                                                    <select name="DeveloperId" class="form-control" required asp-items="@ViewBag.DeveloperId"></select>
                                                 </div>
                                             }
 
@@ -341,7 +341,7 @@
                                                
                                                 <div class="form-group">
                                                     <label name="Role" class="control-label">Assign Role</label>
-                                                    <select name="Role" id="DeveloperId" class="form-control" asp-items="ViewBag.Roles"></select>
+                                                    <select name="Role" id="DeveloperId" required class="form-control" asp-items="ViewBag.Roles"></select>
                                                 </div>
                                             }
 
@@ -411,7 +411,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <label name="projectId" class="control-label">Projects</label>
-                                                <select name="projectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                                                <select name="projectId" class="form-control" required asp-items="ViewBag.ProjectId"></select>
                                             </div>
                                             @if (!(await UserManager.IsInRoleAsync(user, Roles.Developer.ToString())))
                                             {
@@ -423,7 +423,7 @@
 
                                                 <div class="form-group">
                                                     <label name="DeveloperId" class="control-label">Developer</label>
-                                                    <select name="DeveloperId" class="form-control" asp-items="@ViewBag.DeveloperId"></select>
+                                                    <select name="DeveloperId" class="form-control" required asp-items="@ViewBag.DeveloperId"></select>
                                                 </div>
                                             }
 
@@ -491,7 +491,7 @@
                                             
                                                 <div class="form-group">
                                                     <label name="Role" class="control-label">Assign Role</label>
-                                                    <select name="Role" id="DeveloperId" class="form-control" asp-items="ViewBag.Roles"></select>
+                                                    <select name="Role" id="DeveloperId" required class="form-control" asp-items="ViewBag.Roles"></select>
                                                 </div>
                                             }
 
